...
                        VStack(spacing: 20){
                            //Title
                            Text("ResetPassword".localized(using: currentLanguage))
                                .font(.largeTitle)
                                .fontWeight(.bold)
                                .foregroundColor(themeManager.isDarkMode ? Color("LightGreen"):Color("DarkGreen"))
                                .accessibilityIdentifier("ResetPasswordTitle")
                            // Email input
                            CustomTextField(placeholder: "Email".localized(using: currentLanguage), text: $email, isSecure: .constant(false))
                            // Send button
                            CustomButton(
                                title: "Send".localized(using: currentLanguage),
                                action: {
...
