...

// Cart
"YourCartEmpty" = "Your Cart is Empty";
"AddProductsHere" = "Add a products to see it here.";
"MyCart" = "My Cart";
"Continue" = "Continue";
"Login" = "Login";
"Cancel" = "Cancel";
"OutofStock" = "Out of Stock";
"ProductOutStock" = "The product is out of stock.";

// Review
"ReviewConfirm" = "Review and Confirm";
...
